try run with different plugins