@@ -18,8 +18,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>10</maven.compiler.source>
-    <maven.compiler.target>10</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
     <asm.version>6.1.1</asm.version>
     <jersey.version>2.28-RC4</jersey.version>
     <junit.version>4.11</junit.version>
@@ -30,7 +30,7 @@
     <maven.clean.plugin>3.1.0</maven.clean.plugin>
     <maven.resource.plugin>3.0.2</maven.resource.plugin>
     <maven.compiler.plugin>3.8.0</maven.compiler.plugin>
-    <maven.surefire.plugin>2.22.1</maven.surefire.plugin>
+    <maven.surefire.plugin>2.22.0</maven.surefire.plugin>
     <maven.war.plugin>3.2.2</maven.war.plugin>
     <maven.install.plugin>2.5.2</maven.install.plugin>
     <maven.deploy.plugin>2.8.2</maven.deploy.plugin>
@@ -105,16 +105,15 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${maven.compiler.plugin}</version>
           <configuration>
-            <source>10</source>
-            <target>10</target>
+            <release>11</release>
           </configuration>
-          <dependencies>
-            <dependency>
-              <groupId>org.ow2.asm</groupId>
-              <artifactId>asm</artifactId>
-              <version>${asm.version}</version>
-            </dependency>
-          </dependencies>
+          <!--<dependencies>-->
+            <!--<dependency>-->
+              <!--<groupId>org.ow2.asm</groupId>-->
+              <!--<artifactId>asm</artifactId>-->
+              <!--<version>${asm.version}</version>-->
+            <!--</dependency>-->
+          <!--</dependencies>-->
         </plugin>
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
@@ -123,6 +122,9 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven.surefire.plugin}</version>
+          <configuration>
+            <argLine>--illegal-access=permit</argLine>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-war-plugin</artifactId>
